--- a/css/style.css
+++ b/css/style.css
@@ -470,4 +470,503 @@ body{
 /* LAYOUT
 /*******************************************/
 
+@media all and (max-width: 320px) {
+  
+  html {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 62.5%;
+    /*background-color: pink*/
+  }
+  
+  header {
+    width: 100%;
+    /*border: 1px solid red;*/
+    background-color: white;
+    background-repeat: no-repeat;
+  }
+  
+  .navIcon {
+    width: 3rem;
+    visibility: visible;
+  }
+  
+  .headerNav {
+    /*border: 3px solid aqua;*/
+    width: 100%;
+    height: 17vh;
+    overflow: auto;
+    padding-left: 1rem;
+    padding-right: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 0rem;
+    border-bottom: 1px solid rgb(49, 87, 201);
+  }
+  
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  .searchIcon, .shoppingBagIcon {
+    width: 2rem;
+    /*border: 1px solid lime;*/
+  }
+  
+  .navLink {
+    list-style-type: none;
+    /*border: 1px solid violet;*/
+  }
+  
+  /* nav li */
+  .headerNav .navLink {
+    float: left;
+    padding: 0 1.5rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    margin-right: 2rem;
+    visibility: hidden;
+  }
+  
+  .headerNav .navLink:first-child {
+    margin-right: 5rem;
+    padding-top: 2rem;
+    visibility: visible;
+  }
+  
+  .headerNav .navLink:last-child {
+    margin-left: 5rem;
+  }
+  
+  .logo {
+    height: 7rem;
+    margin-top: -3.7rem;
+    margin-bottom: 1rem;
+    /*border: 1px solid red;*/
+  }
+  
+  body{
+    background-image: url(/images/main-image02.jpg);
+    background-size: 60vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 25% 36%;/* x-position, y-position*/
+    
+  }
+  
+  .mainPageBanner .mainPageContent {
+    position: relative;
+    /*border: 1px solid white;*/
+    width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 1%;
+    padding-left: 5%;
+  }
+  
+  .mainPageBanner h1 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 3rem;
+    line-height: 4rem;
+    color: white;
+    text-transform: uppercase;
+    margin-top: 0rem;
+    margin-bottom: 2rem;
+  }
+  
+  .mainPageBanner p {
+    width: 70%;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+    color: white;
+    margin-top: 65%;
+    margin-bottom: 3rem;
+  }
+  
+  .mainPageBanner a {
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: white;
+    padding: 1.5rem 4rem;
+    background-color: black;
+  }
+  
+  .firstVisitDiscount {
+    /*border: 1px solid red;*/
+    position: relative;
+    width: 100%;
+    height: 43vh;
+    margin-left: 0%;
+    margin-top: 7.5%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 12rem;
+    background-color: black;
+  }
+  
+  .firstVisitDiscount h4 {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: white;
+    border-left: 3px solid white;
+    margin-left: -2rem;
+    padding-left: 3.5rem;
+    line-height: 4rem;
+  }
+  
+  .firstVisitDiscount span {
+    font-size: 4rem;
+    font-weight: bold;
+  }
+  
+  .firstVisitDiscount p {
+    color: white;
+    font-size: 2.9rem;
+    line-height: 3.5rem;
+    margin-top: 1rem;
+    margin-bottom: 4rem;
+    width: 100%;
+  }
+  
+  .firstVisitDiscount a {
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: black;
+    padding: 1.5rem 36%;
+    background-color: white;
+  }
+  
+  .schedule h3 {
+    position: absolute;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    color: white;
+    transform: rotate(90deg);
+    top: 40.5%;
+    right: -10rem;
+  }
+  .leftArrow {
+    transform: rotateY(180deg);
+  }
+  
+  .arrow {
+    width: 1.5rem;
+  }
+  
+  .arrows {
+    position: absolute;
+    top: 48rem;
+    left: 27rem;
+  }
+  
+  .services {
+    position: relative;
+    height: 115vh;
+    background-color: white;
+    /*border: 1px solid red;*/
+  }
+  
+  .services ul {
+    /*border: 3px solid aqua;*/
+    padding-left: 0%;
+    
+  }
+  
+  .services ul > li {
+    float: left;
+    /*border: 1px solid lime;*/
+    width: 100%;
+    margin: 2rem 0rem;
+    padding: 0 1rem;
+    text-align: center;
+    list-style-type: none;
+  }
+  
+  .greyCircle {
+    position: relative;
+    width: 5rem;
+    height: 5rem;
+    top: 4.5rem;
+    left: 10.9rem;
+    z-index: 0;
+    background-color: rgb(244, 238, 238);
+    border-radius: 50%;
+  }
+  
+  .icon {
+    height: 5rem;
+    z-index: 1;
+  }
+  
+  .chairIcon, .creamIcon, .beautyIcon {
+    transform: rotateY(180deg);
+  }
+  
+  .beautyIcon {
+    z-index: 10;
+    left: -0.1rem;
+  }
+  
+  .services h6 {
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  
+  .services p {
+    font-size: 1.5rem;
+  }
+  
+  .momentumContainer {
+    background-color: #f6f2f2;
+    height: 70vh;
+    margin-top: 0;
+    padding-top: 7%;
+  }
+  
+  .momentumContent {
+    width: 100%;
+    /*border: 3px solid red;*/
+    margin-left: 0%;
+    margin-right: 0%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    overflow: auto;
+  }
+  
+  .textBox, .hairdressing {
+    float: right;
+    clear: right;
+    width: 100%;
+    padding: 0 0%;
+    text-align: center;
+  }
+  
+  .hairdressing {
+    width: 100%;
+    transform: rotateY(-180deg);
+    float: right;
+    clear: right;
+    padding-top: 0;
+  }
+  
+  .textBox {
+    float: left;
+    clear: left;
+    padding: 0 1rem 4rem 1rem;
+  }
+  
+  .momentumContent h2 {
+    font-size: 3.1rem;
+    margin-top: 0;
+    text-transform: uppercase;
+  }
+  
+  .momentumContent p {
+    font-size: 1.7rem;
+    margin-bottom: 4rem;
+    line-height: 2rem;
+  }
+  
+  .momentumContent a {
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: white;
+    padding: 1.5rem 36%;
+    background-color: black;
+  }
+  
+  .hairdressersContainer {
+    /*border: 1px solid red;*/
+    background-color: white;
+    height: 175vh;
+    margin-left: -3rem;
+    padding-top: 7%;
+
+  }
+  
+  .hairdresserContent {
+    border: 3px solid lime;
+    width: 100%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+    padding-top: 32%;
+    padding-bottom: 32%;
+    /*overflow: auto;*/
+  }
+  
+  .hairdresserContent .hairDresserBox {
+    position: relative;
+    /*border: 2px solid violet;*/
+    float: left;
+    clear: left;
+    width: 100%;
+    list-style-type: none;
+    margin: 2rem -1rem 5rem;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
+  .hairdresserContent h6 {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  
+  .hairdresserContent span {
+    font-size: 1.3rem;
+  }
+  
+  .stylist {
+    height: 100%;
+    /*width: 120%;*/
+    object-fit: cover;
+  }
+  
+  .nameSpecialty {
+    position: absolute;
+    /*border: 1px solid red;*/
+    padding: 0.9rem 0rem 1.5rem;
+    top: 24rem;
+    left: 5.5rem;
+    color: white;
+    background-color: black;
+    width: 19rem;
+  }
+  
+  .dayOfferContainer {
+    background-color: white;
+    height: 80vh;
+    margin-top: 0%;
+    padding-top: 0%;
+  }
+  
+  .dayOfferContent {
+    width: 100%;
+    /*border: 3px solid red;*/
+    background-color: #f6f2f2;
+    margin-left: 0%;
+    margin-right: 0%;
+    /*padding-top: 2%;
+    padding-bottom: 2%;*/
+    overflow: auto;
+  }
+  
+  .funkyGirl {
+    box-sizing: border-box;
+    width: 100%;
+    float: right;
+    clear: right;
+    padding-bottom: 2rem;
+  }
+  
+  .bannerTextBox {
+    /*border: 1px solid lime;*/
+    width: 100%;
+    margin-left: 0%;
+    margin-top: 19%;
+    text-transform: uppercase;
+  }
+  
+  .bannerTextBox h5{
+    font-size: 1.9rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  
+  .bannerTextBox p {
+    font-size: 2.3rem;
+    line-height: 4rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  
+  .bannerTextBox span {
+    font-size: 3.5rem;
+    font-weight: bold;
+  }
+  
+  .bannerTextBox a {
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: white;
+    padding: 1.5rem 27%;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    background-color: black;
+  }
+  
+  .lookBookContainer {
+    background-color: white;
+    height: 200vh;
+    margin-top: 0;
+    padding-top: 5%;
+    text-align: center;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-left: -4rem;
+  }
+  
+  .lookBookContent {
+    width: 100%;
+    /*border: 3px solid red;
+    background-color: #f6f2f2;*/
+    /*background-color: red;*/
+    /*padding-top: 2%;
+    padding-bottom: 2%;*/
+    /*overflow: auto;*/
+    background-color: white;
+  }
+  
+  .lookBookContent h3{
+    font-size: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    padding-left: 12%;
+  }
+  
+  .photo {
+    width: 27rem;
+    height: 10%;
+    /*padding-bottom: 3rem;*/
+    padding: 0;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  
+  .photo01, .photo04, .photo05 {
+    /*height: 50vh;*/
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+  }
+  
+  .photo02, .photo03, .photo06 {
+   /* height: 60vh;*/
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .photoContainer ul {
+    float: left;
+    clear: left;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .photoContainer ul li{
+    list-style-type: none;
+    padding: 0;
+  }
+
+  
+  
+  
+}
 
